# streetnoise.at

./: .acclaimed.json  .babelrc  .dockerignore  .envrc  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  flake.nix  manage.py  package-lock.json  package.json  pyproject.toml  requirements.frozen.txt  requirements.txt  rollup.config.js  shell.nix
.github/workflows/: build-and-deploy.yml  deploy.yml  publish_container.yml
_css/: _accordian.scss  _bulma-accordion.scss  _colors.scss  _crowdfunding.scss  _form.scss  _mediaelement.scss  _social.scss  festival2019.scss  festival2023.scss  festival2026.scss  strafiato.scss  streetnoise.scss
_javascript/: crowdfunding.js  streetnoise.js
blog/: abstract.py  blocks.py  models.py  tests.py  translation.py  urls.py  utils.py  views.py
blog/migrations/: 0001_initial.py  0001_squashed_0006_auto_20180206_2239.py  0002_auto_20150226_2305.py  0002_auto_20190605_1104.py  0003_auto_20150323_2116.py  0003_auto_20200105_1611.py  0004_auto_20150427_2047.py  0004_auto_20200604_1323.py  0005_auto_20151019_1121.py  0005_auto_20200608_0800.py  0006_auto_20180206_2239.py  0006_auto_20200608_0800.py  0007_auto_20200608_1047.py  0008_auto_20200608_1445.py  0009_auto_20200608_1812.py  0010_auto_20200609_0727.py  0011_alter_blogpagetag_tag.py  0012_alter_blogcategory_id_alter_blogcategoryblogpage_id_and_more.py  0013_alter_blogpage_body_alter_blogpage_body_de_and_more.py  0014_alter_blogpage_body_alter_blogpage_body_de_and_more.py  0015_alter_blogpage_body_alter_blogpage_body_de_and_more.py  0016_blogpage_thumbnail_image_alter_blogpage_header_image.py  0017_alter_blogpage_thumbnail_image.py
crowdfunding/: admin.py  apps.py  models.py  views.py
crowdfunding/migrations/: 0001_initial.py  0002_donation_paid_dt_donation_payment_id_and_more.py  0003_rename_payment_link_donation_product_id.py  0005_alter_donation_backer_name.py  (+1 more)
festival2023/: apps.py  blocks.py  models.py  translation.py
festival2026/: apps.py  blocks.py  models.py  translation.py
gigs/: apps.py  models.py  translation.py
home/: blocks.py  forms.py  models.py  newsletter.py  translation.py  views.py  wagtail_hooks.py
newsletter/: filters.py  models.py  wagtail_hooks.py
songs/: models.py  translation.py  views.py
streetnoise/: __init__.py  apps.py  auth_adapter.py  models.py  translation.py  urls.py  wagtail_hooks.py  wsgi.py
(+215 files in other folders)
